--- a/css/stylesheet2.css
+++ b/css/stylesheet2.css
@@ -1,12 +1,12 @@
 div {
-  display: block;
+  display: inline-block;
   border-radius: 5px;
-  height: 50px;
-  width: 50px;
+  height: 100px;
+  width: 100px;
+  
 }
 #one{
   background-color: black;
-
 }
 #two {
   background-color: yellow;
